--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,9 @@ nav {
     justify-content: space-around;
     list-style: none;
 }
+
+.background-color {
+    background: #FF512F;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #DD2476, #FF512F);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #DD2476, #FF512F); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
